# wzmach

./: .gitignore  Cargo.toml  Makefile  README.md  changelog.txt  config.ron  default.nix  wzmach.desktop
.github/workflows/: workflow.yaml
src/: action.rs  action_sink.rs  common.rs  config.rs  gesture_event.rs  input_event.rs  input_producer.rs  main.rs
src/action/: command_action.rs  consumer.rs  mod.rs  uinput_action.rs
src/config/: key.rs  mod.rs  trigger.rs
src/gesture_event/: trigger.rs
src/input_producer/: event.rs
