[package]
name = "wzmach"
version = "0.1.0"
edition = "2021"

[dependencies]
bpaf = { git = "https://github.com/d86leader/bpaf", rev = "08259bbe30bb8622afefcfdebdd540554205a37a" }
env_logger = "0.9"
input = "0.7"
libc = "0.2"
log = "0.4"
nix = "0.24"
phf = { version = "0.10", features = ["macros"] }
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
sorted-vec = "0.8"
thiserror = "1.0"
uinput = "0.1.3"
