[package]
name = "wzmach"
version = "1.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bpaf = "0.4"
env_logger = "0.9"
input = "0.7"
libc = "0.2"
log = "0.4"
nix = "0.24"
phf = { version = "0.10", features = ["macros"] }
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
sorted-vec = "0.8"
thiserror = "1.0"
uinput = "0.1.3"
